--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.5.2",
     "firebase-admin": "^11.11.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.3"
+    "mongoose": "^7.6.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
