--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-pwa": "^0.19.0"
   }
 }
